--- a/homework/session02/BT2/B2-part1.html
+++ b/homework/session02/BT2/B2-part1.html
@@ -7,19 +7,23 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
-    <h1 style="color: red ; font-size: 20;">LẬP TRÌNH VIÊN QUỐC TẾ ACCP I16 - CHƯƠNG TRÌNH 2 NĂM
-    </h1>
-    <img src="https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/Banner.jpg" alt="Hình aptech">
-    <h2 style="color: red; text-align:center">10 LỢI ÍCH KHI HỌC ACCP i16</h2>
-    <center><img src="https://aptech-danang.edu.vn/Content/ace/images/icons/giang-vien.png" alt=" Hình Ảnh"></center>
-    <h3 style="color: red ; text-align: center;"> Không Lo Thất Nghiệp</h3>
-    <p style="text-align: center ;">Cam kết có việc làm sau khi tốt nghiệp</p>
-    <center><img src="https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/2.png" alt="aaaa"></center>
-    <h2 style="color: red ; text-align: center;">Bảo hiểm học tập</h2>
-    <p style="text-align: center ;">Được đảm bảo chắc chắn về kết quả học tập</p>
-    <center><img src="https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/7.png" alt="acc 1"></center>
-    <h2 style="color: red ; text-align: center;">Làm Chủ Công Nghệ</h2>
-    <p style="text-align: center ;">Tinh Thông Android và 20 công nghệ mới nhất của Java EE và .NET mà doanh nghiệp Cần</p>
-    <center><img src="https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/4.png" alt=""></center>
+    <header></header>
+    <nav></nav>
+    <div>
+        <h1 style="color: red ; font-size: 20;">LẬP TRÌNH VIÊN QUỐC TẾ ACCP I16 - CHƯƠNG TRÌNH 2 NĂM</h1>
+        <img src="https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/Banner.jpg" alt="Hình aptech">
+        <h2 style="color: red; text-align:center">10 LỢI ÍCH KHI HỌC ACCP i16</h2>
+        <center><img src="https://aptech-danang.edu.vn/Content/ace/images/icons/giang-vien.png" alt=" Hình Ảnh"></center>
+        <h3 style="color: red ; text-align: center;"> Không Lo Thất Nghiệp</h3>
+        <p style="text-align: center ;">Cam kết có việc làm sau khi tốt nghiệp</p>
+        <center><img src="https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/2.png" alt="aaaa"></center>
+        <h2 style="color: red ; text-align: center;">Bảo hiểm học tập</h2>
+        <p style="text-align: center ;">Được đảm bảo chắc chắn về kết quả học tập</p>
+        <center><img src="https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/7.png" alt="acc 1"></center>
+        <h2 style="color: red ; text-align: center;">Làm Chủ Công Nghệ</h2>
+        <p style="text-align: center ;">Tinh Thông Android và 20 công nghệ mới nhất của Java EE và .NET mà doanh nghiệp Cần</p>
+        <center><img src="https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/4.png" alt=""></center>
+    </div>
+    <footer></footer>
 </body>
 </html>
