--- a/homework/session02/BT4-Session 2/B4-layout 1.html
+++ b/homework/session02/BT4-Session 2/B4-layout 1.html
@@ -36,7 +36,7 @@
             }
             .hop_cha{
                 display: flex;
-                border: 2px solid black;
+                /* border: 2px solid black; */
                 height: 70%
             }
             .hop_conc_c{
@@ -52,13 +52,11 @@
                 height: 30%;
             }
             .hop_section{
-                border: 2px solid;
-                height: 50%;
+                border-bottom: 2px solid;
                 justify-content: center;
             }
             .hop_article{
-                border: 2px solid;
-                height: 50%;
+                /* border: 2px solid; */
             }
             .c_section{
                 text-align: center;
@@ -73,8 +71,8 @@
                 padding: 189px;
             }
             .hp_lo{
-                text-align: center
-                ;
+                text-align: center;
+                
             }
         </style>
     </head>
