--- a/homework/session02/BT4-Session 2/B4-layout 1.html
+++ b/homework/session02/BT4-Session 2/B4-layout 1.html
@@ -7,7 +7,7 @@
         <title>B4-Layout Session02</title>
         <style>
             body{
-                margin: 0;
+                margin: 0;0
                 padding: 0;
             }
             header{
